app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require typography
 */

html { height: 100%; }

body {
  background-color: #f8f6f3;
  margin: 0;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #333;
  position: absolute;
  height: 100%;
  width: 100%;
}

body:before {
  content:"";
  height:100%;
  float:left;
  width:0;
  margin-top:-32767px;
}

#site.inner {
  padding: 0;
  height: 100%;
  width: 100%;
  background: #FFF;
  border-left: 1px solid #DDD;
  border-right: 1px solid #DDD;
  max-width: 898px;
  margin: 0 auto;
  min-height: 100%;
}

header .inner, section, footer{
  width: 100%;
  padding: 15px;
  margin: 0 auto;
}

section, footer {
  max-width: 870px;
}

section {
  padding-top: 15px;
  overflow: auto;
	padding-bottom: 50px;
	position: relative;
	top: 50px;
}

footer {
  position: relative;
	margin-top: -50px;
	height: 50px;
	clear: both;
	padding: 0;
	padding-left: 15px;
  padding-right: 15px;
  line-height: 50px;
  font-family: "ITC Franklin Condensed";
  font-size: 1.4em;
}

/* Header */

header {
  background-color: #FF7400;
  color: #FFF;
  height: 50px;
  line-height: 50px;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  font-family: "ITC Franklin Condensed";
  -webkit-box-shadow: 0 1px 5px rgba(20,20,20,.2);
     -moz-box-shadow: 0 1px 5px rgba(20,20,20,.2);
          box-shadow: 0 1px 5px rgba(20,20,20,.2);
  overflow: hidden;
}

header .inner {
  height: 50px;
  padding: 0;
  position: relative;
  background-color: #FF7400;
  max-width: 900px;
}

header .inner .left {
  position: absolute;
  height: 50px;
  width: 156px;
  left: 0;
  top: 0;
  padding-left: 15px;
  border-left: 1px solid #FF9640;
}

header .inner h2 {
  margin: 0;
  font-size: 36px;
  width: 156px;
  height: 50px;
  font-weight: 100;
  display: inline-block;
  top: 0;
  position: relative;
  -webkit-transition: top .3s;
     -moz-transition: top .3s;
      -ms-transition: top .3s;
       -o-transition: top .3s;
          transition: top .3s;
  -webkit-transition-timing-function: cubic-bezier(0.920, 0.015, 0.610, 1); /* older webkit */
  -webkit-transition-timing-function: cubic-bezier(0.920, 0.015, 0.610, 1.430);
     -moz-transition-timing-function: cubic-bezier(0.920, 0.015, 0.610, 1.430);
      -ms-transition-timing-function: cubic-bezier(0.920, 0.015, 0.610, 1.430);
       -o-transition-timing-function: cubic-bezier(0.920, 0.015, 0.610, 1.430);
          transition-timing-function: cubic-bezier(0.920, 0.015, 0.610, 1.430);
}

header .inner h2.shadow {
  position: absolute;
  top: 55px;
  left: 15px;
}

header .inner .left:hover h2 {
  top: -55px;
}

header .inner .left:hover h2.shadow {
  top: 0;
}

header .inner .left:active h2 {
  color: #444;
}

header .inner .right, header .inner .left {
  font-size: 0;
  height: 50px;
}

header .inner .right div {
  font-size: 22px;
  border-left: 1px solid #FF9640;
  border-right: 1px solid #FF9640;
  margin-right: -1px;
  padding-left: 15px;
  padding-right: 15px;
  display: inline-block;
}

header .inner .right a:last-child div {
  margin-right: 0;
}

header .inner .right a:hover div {
  background-color: #FFF;
  color: #FF7400;
  border-color: transparent;
}

header .inner .right a:hover + a div {
  border-left-color: transparent;
}

header .inner .right a:last-child:hover div {
  border-right-color: #FF7400;
}

header .inner .right a:active div {
  background-color: #FFF;
  color: #444;
  border-color: transparent;
}

header .inner .right a:active + a div {
  border-left-color: transparent;
}

/* Generic Elements */

.left {
  float: left;
}

.right {
  float: right;
}

ul {
  padding-left: 20px;
}

/* Copy Text */

h1 + p, p:first-child {
  margin-top: 0;
}

/* Headers */

h1, h2, h3 {
  margin: 0;
  font-family: "ITC Franklin Condensed";
  -webkit-font-smoothing: subpixel-antialiased;
}

h1 {
  font-size: 3.25em;
  font-weight: 100;
  font-weight: 900;
}

/* Anchors */

header a:link, header a, header a div, header a h2 {
  color: #FFF;
  text-decoration: none;
}

/* Profiles */

#default {
  float: left;
  width: 150px;
  height: 150px;
  margin-right: 15px;
  margin-bottom: 15px;
  -webkit-border-radius: 75px;
     -moz-border-radius: 75px;
       -o-border-radius: 75px;
          border-radius: 75px;
}

